Fix 2FA, Docs and GDPS Name bugs
